--- a/site Riding Citites/index.html
+++ b/site Riding Citites/index.html
@@ -14,13 +14,20 @@
   </head>
   <body>
     <div class="container">
+      <!--en-tête!                                                  
+      -->
+
       <header>
         <img src="images/header.png" alt="skateboard sur un sol goudronné" />
         <div class="headerTextContent">
           <h1>RIDING CITIES</h1>
         </div>
       </header>
+
       <main>
+        <!--Section n°1 La Mission de l'Assos!                        
+        -->
+
         <section>
           <h2>La mission de l'asso</h2>
           <div class="directionRow">
@@ -58,7 +65,16 @@
           </div>
         </section>
 
-        <!-- section portrait ! -->
+        <!--Section n°2 Les Membres Fondateurs-------------------- 
+!! les "titres (h3) ne correspondent pas à ceux de la maquette"...
+!! Il faut ajouter une class au CSS :
+Exemple :
+.nameFoundersMembers {
+	font-weight:600; 
+	font-size:20px; 
+	line-height:22px;   
+}
+        -->
 
         <section class="sectionLinearGradientBackground">
           <div class="directionRow whiteContentSection">
@@ -101,7 +117,8 @@
           </div>
         </section>
 
-        <!-- section boutons ! -->
+        <!--Section Boutons!                                          
+        -->
 
         <section>
           <h2>Découvrez nos cours !</h2>
@@ -121,6 +138,8 @@
           </div>
         </section>
       </main>
+      <!--Footer ? Suggestion-> plans de site, contact, Map, itinéraire, ré@lisation, autre liens...
+      -->
     </div>
   </body>
 </html>
