--- a/site Riding Citites/index.html
+++ b/site Riding Citites/index.html
@@ -13,6 +13,10 @@
     <title>Riding Cities</title>
   </head>
   <body>
+    <!-- Info : La barre oblique(de fin) [ / ] sur les balises orphelines, 
+      [n'ont aucun effet] et [interagissent mal] 
+      avec les valeurs d'attributs sans guillemets 
+    -->
     <div class="container">
       <!--en-tête!                                                  
       -->
@@ -25,7 +29,7 @@
       </header>
 
       <main>
-        <!--Section n°1 La Mission de l'Assos!                        
+        <!--Section n°1 La Mission de l'Assos                        
         -->
 
         <section>
@@ -65,7 +69,7 @@
           </div>
         </section>
 
-        <!--Section n°2 Les Membres Fondateurs-------------------- 
+        <!--Section n°2 Les Membres Fondateurs 
 !! les "titres (h3) ne correspondent pas à ceux de la maquette"...
 !! Il faut ajouter une class au CSS :
 Exemple :
@@ -117,7 +121,7 @@ Exemple :
           </div>
         </section>
 
-        <!--Section Boutons!                                          
+        <!--Section Boutons                                          
         -->
 
         <section>
