commit modif. commentaires membre fondateurs

--- a/site Riding Citites/index.html
+++ b/site Riding Citites/index.html
@@ -69,15 +69,19 @@
           </div>
         </section>
 
-        <!--Section n°2 Les Membres Fondateurs 
-!! les "titres (h3) ne correspondent pas à ceux de la maquette"...
-!! Il faut ajouter une class au CSS :
-Exemple :
-.nameFoundersMembers {
-	font-weight:600; 
-	font-size:20px; 
-	line-height:22px;   
-}
+        <!--Section n°2 Les Membres Fondateurs         
+          =!! les "titres (h3) ne correspondent pas à ceux de la maquette"...
+        !! Dans le CSS=>
+        !! Il faut créer une class ex:(.nameFoundersMembers h3{})
+        !! Exemple :
+        !! .nameFoundersMembers h3 {
+        !! 	font-weight:600; 
+        !! 	font-size:20px; 
+        !! 	line-height:22px;   
+        !! }
+        !! Et dans le HTML=>
+        !! l'ajouter à la deuxième <div class="directionRow whiteContentSection"> 
+        !! celle qui englobe (les) <article> de la section=> membres fondateurs.
         -->
 
         <section class="sectionLinearGradientBackground">
