commit modif. tout les commentaires

--- a/site Riding Citites/index.html
+++ b/site Riding Citites/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!--  
-          /*Attention Doublon dans le fichier CSS */
+          /*Erreurs dans le fichier CSS */
           !!Doublon : le selecteur "h2", est utilisé sur "la ligne 28" et "74"*/
           !!Famille de polices génériques manquante (manque, sans-serif;) ligne 100" et "153"
     -->
