commit modif. tout les commentaires

--- a/site Riding Citites/index.html
+++ b/site Riding Citites/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <!--  
-          /*Erreurs dans le fichier CSS */
-          !!Doublon : le selecteur "h2", est utilisé sur "la ligne 28" et "74"*/
-          !!Famille de polices génériques manquante (manque, sans-serif;) ligne 100" et "153"
-    -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,10 +14,15 @@
     <title>Riding Cities</title>
   </head>
   <body>
+    <!--  
+          !!Erreurs dans le fichier CSS */
+          /*Doublon : le selecteur "h2", est utilisé sur "la ligne 28" et "74"*/
+          /*Famille de polices "génériques" manquante (manque-> sans-serif;) ligne 100" et "153"*/
+    -->
     <!-- 
-          Info : La barre oblique(de fin) [ / ] sur les balises orphelines, 
+          *Info : Barre oblique(de fin) [ / ] sur les balises orphelines, 
           [n'ont aucun effet] et [interagissent mal] 
-          avec les valeurs d'attributs sans guillemets 
+          avec les valeurs d'attributs sans guillemets;
     -->
 
     <div class="container">
@@ -82,7 +83,7 @@
           Section n°2 Les Membres Fondateurs         
           !! les "titres (h3) ne correspondent pas à ceux de la maquette"...
           Dans le CSS=>
-          Il faut créer une class ex:(.nameFoundersMembers h3{})
+          *Il faut créer une class ex:(.nameFoundersMembers h3{})
           Exemple :
 
           .nameFoundersMembers h3 {
@@ -91,8 +92,8 @@
              	line-height:22px;   
           }
           Dans le HTML=>
-          Ajouter la class "nameFoundersMembers" à la <div class="directionRow whiteContentSection"> 
-          (la seconde, celle qui englobe (les) <article> de la section=> membres fondateurs).
+          *Ajouter la class "nameFoundersMembers" à la <div class="directionRow whiteContentSection"> 
+          (la seconde, celle qui englobe (les) <article> section=> "membres fondateurs").
         -->
 
         <section class="sectionLinearGradientBackground">
@@ -159,7 +160,7 @@
         </section>
       </main>
       <!--
-          ? Créer un footer  
+          ? Créer un footer ?
           ? Suggestion : plans de site, contact, Map, itinéraire, ré@lisation Webonzaï, ect...
       -->
     </div>
